fixed spacing and formatting of banner section

--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ h1.hero-heading-break {
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
-    padding: 50px 0;
+    padding: 75px 0;
 }
 
 .cta-content {
@@ -422,6 +422,7 @@ h1.hero-heading-break {
     outline: 0;
     margin-left: 0;
     margin-right: 0;
+    margin-top: 30px;
 }
 
 .banner-button:hover {
